# property_transaction_malaysia

./: .gitignore  README.md  explore.ipynb  pyproject.toml
references/: state_mapping.py
src/processing/: raw_processing.py  validation.py
src/references/: data_reference.py
