[tool.poetry]
name = "customer-segmentation"
version = "0.1.0"
description = "A machine learning project for customer segmentation using clustering techniques."
authors = ["faisallitic@gmail.com"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
numpy = "^1.26"
scikit-learn = "^1.5"
matplotlib = "^3.8"
seaborn = "^0.13"
jupyterlab = "^4.1"
ipykernel = "^6.29"
plotly ="^6.2.0"
kagglehub = "0.3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
flake8 = "^7.0"
mypy = "^1.10"
pytest = "^8.2"
jupyterlab-code-formatter = "^2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
